Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2722

LustreError: 30217:0:(rw26.c:485:ll_direct_IO_26()) ASSERTION( obj->cob_transient_pages == 0 ) failed:

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6616

      LustreError: 30217:0:(rw26.c:485:ll_direct_IO_26()) ASSERTION( obj->cob_transient_pages == 0 ) failed:
      LustreError: 30217:0:(rw26.c:485:ll_direct_IO_26()) LBUG
      Pid: 30217, comm: diotest6
      Call Trace:
      [<ffffffff81007699>] try_stack_unwind+0x1a9/0x200
      [<ffffffff81005ea5>] dump_trace+0x95/0x300
      [<ffffffffa02c28d7>] libcfs_debug_dumpstack+0x57/0x80 [libcfs]
      [<ffffffffa02c2e27>] lbug_with_loc+0x47/0xb0 [libcfs]
      [<ffffffffa0a94a22>] ll_direct_IO_26+0x1332/0x1480 [lustre]
      [<ffffffff810c273e>] generic_file_aio_read+0x61e/0x640
      [<ffffffffa0aa7ad5>] vvp_io_read_start+0x1f5/0x3d0 [lustre]
      [<ffffffffa05c89fa>] cl_io_start+0x6a/0x130 [obdclass]
      [<ffffffffa05ccc5c>] cl_io_loop+0xac/0x1a0 [obdclass]
      [<ffffffffa0a53c03>] ll_file_io_generic+0x353/0x530 [lustre]
      [<ffffffffa0a542a8>] ll_file_aio_read+0x238/0x290 [lustre]
      [<ffffffff81105253>] do_sync_readv_writev+0xf3/0x140
      [<ffffffff81106134>] do_readv_writev+0xd4/0x1f0
      [<ffffffff8110647b>] vfs_readv+0x3b/0x60
      [<ffffffff811065c5>] sys_readv+0x55/0xc0
      [<ffffffff810028db>] system_call_fastpath+0x16/0x1b
      [<00007f17d04921ab>] 0x7f17d04921ab
      Kernel panic - not syncing: LBUG

            wc-triage WC Triage
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: